force-app/main/default/objects/ABSLAMC_Litmus_AppId_Metadata__mdt/ABSLAMC_Litmus_AppId_Metadata__mdt.object-meta.xml
<CustomObject>
    <label>ABSLAMC Litmus AppId Metadata</label>
    <pluralLabel>ABSLAMC Litmus AppId Metadata</pluralLabel>
</CustomObject>