force-app/main/default/objects/ABSLAMC_Litmus_AppId_Metadata__mdt/fields/AppId__c.field-meta.xml
<CustomField>
    <fullName>AppId__c</fullName>
    <label>AppId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>