force-app/main/default/objects/ABSLAMC_Litmus_AppId_Metadata__mdt/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call Centre</fullName>
                <default>true</default>
                <label>Call Centre</label>
            </value>
            <value>
                <fullName>Branch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>