force-app/main/default/objects/ABSLAMC_Litmus_AppId_Metadata__mdt/listViews/All_ABSLAMC_Litmus_AppId_Metadata.listView-meta.xml
<ListView>
    <fullName>All_ABSLAMC_Litmus_AppId_Metadata</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Source__c</columns>
    <columns>Channel__c</columns>
    <columns>AppId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All ABSLAMC Litmus AppId Metadata</label>
</ListView>